--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -3,3 +3,21 @@ FROM nvcr.io/nvidia/pytorch:22.05-py3
 
 # install pycuda
 RUN pip3 install pycuda
+
+# install configargparse
+RUN pip3 install ConfigArgParse
+
+# install opencv
+RUN pip3 install opencv-python
+
+# install scipy
+RUN pip3 install scipy
+
+# install tensorboardx
+RUN pip3 install tensorboardx
+
+# install tqdm
+RUN pip3 install tqdm
+
+# install pillow
+RUN pip3 install pillow==6.2.0
