add imageio and o3d depens

--- a/.devcontainer/Dockerfile
+++ b/.devcontainer/Dockerfile
@@ -13,6 +13,9 @@ RUN pip3 install opencv-python
 # install scipy
 RUN pip3 install scipy
 
+# install imageio
+RUN pip3 install imageio
+
 # install tensorboardx
 RUN pip3 install tensorboardx
 
@@ -21,3 +24,13 @@ RUN pip3 install tqdm
 
 # install pillow
 RUN pip3 install pillow==6.2.0
+
+# Install Open3D system dependencies and pip
+RUN apt-get update && apt-get install --no-install-recommends -y \
+    libgl1 \
+    libgomp1 \
+    python3-pip \
+    && rm -rf /var/lib/apt/lists/*
+
+# Install Open3D from the pypi repositories
+RUN python3 -m pip install --no-cache-dir --upgrade open3d
